fixes the nav menu jump

--- a/src/containers/NavMenu/NavMenu.scss
+++ b/src/containers/NavMenu/NavMenu.scss
@@ -8,7 +8,7 @@
 }
 .Nav {
   position: relative;
-  padding-top: 2.4ch;
+  padding-top: 0.5ch;
   margin-left: 0.5ch;
   width: 15ch;
   text-align: left;
